# bgfx-meson

./: .gitmodules  bgfx.wrap.sample  meson.build  meson_options.txt
meson/bgfx/: meson.build
meson/bimg/: meson.build
meson/bx/: meson.build
meson/examples/: meson.build
meson/examples/common/: meson.build
meson/tools/geometryc/: meson.build
meson/tools/geometryv/: meson.build
meson/tools/shaderc/: meson.build
meson/tools/texturec/: meson.build
meson/tools/texturev/: meson.build
