shaderc_root = '../../../bgfx/tools/shaderc/'
bgfx_root = '../../../bgfx/'

glsl_optimizer_root = bgfx_root + '3rdparty/glsl-optimizer/'
spirv_cross_root = bgfx_root + '3rdparty/spirv-cross/'
spirv_headers_root = bgfx_root + '3rdparty/spirv-headers/'
spirv_tools_root = bgfx_root + '3rdparty/spirv-tools/'

glslang_root = bgfx_root + '3rdparty/glslang/'

fcpp_lib = static_library('fcpp', [
  bgfx_root + '3rdparty/fcpp/cpp1.c',
  bgfx_root + '3rdparty/fcpp/cpp2.c',
  bgfx_root + '3rdparty/fcpp/cpp3.c',
  bgfx_root + '3rdparty/fcpp/cpp4.c',
  bgfx_root + '3rdparty/fcpp/cpp5.c',
  bgfx_root + '3rdparty/fcpp/cpp6.c',
],
c_args: [
'-DNINCLUDE=64',
'-DNWORK=65536',
'-DNBUFF=65536',
'-DOLD_PREPROCESSOR=0',
])


glslang_lib = static_library('glslang', [
  glslang_root + 'glslang/CInterface/glslang_c_interface.cpp',
  glslang_root + 'glslang/GenericCodeGen/CodeGen.cpp',
  glslang_root + 'glslang/GenericCodeGen/Link.cpp',
  glslang_root + 'glslang/HLSL/hlslAttributes.cpp',
  glslang_root + 'glslang/HLSL/hlslGrammar.cpp',
  glslang_root + 'glslang/HLSL/hlslOpMap.cpp',
  glslang_root + 'glslang/HLSL/hlslParseables.cpp',
  glslang_root + 'glslang/HLSL/hlslParseHelper.cpp',
  glslang_root + 'glslang/HLSL/hlslScanContext.cpp',
  glslang_root + 'glslang/HLSL/hlslTokenStream.cpp',
  glslang_root + 'glslang/MachineIndependent/attribute.cpp',
  glslang_root + 'glslang/MachineIndependent/Constant.cpp',
  glslang_root + 'glslang/MachineIndependent/glslang_tab.cpp',
  glslang_root + 'glslang/MachineIndependent/glslang_tab.cpp.h',
  glslang_root + 'glslang/MachineIndependent/InfoSink.cpp',
  glslang_root + 'glslang/MachineIndependent/Initialize.cpp',
  glslang_root + 'glslang/MachineIndependent/Intermediate.cpp',
  glslang_root + 'glslang/MachineIndependent/intermOut.cpp',
  glslang_root + 'glslang/MachineIndependent/IntermTraverse.cpp',
  glslang_root + 'glslang/MachineIndependent/iomapper.cpp',
  glslang_root + 'glslang/MachineIndependent/limits.cpp',
  glslang_root + 'glslang/MachineIndependent/linkValidate.cpp',
  glslang_root + 'glslang/MachineIndependent/parseConst.cpp',
  glslang_root + 'glslang/MachineIndependent/ParseContextBase.cpp',
  glslang_root + 'glslang/MachineIndependent/ParseHelper.cpp',
  glslang_root + 'glslang/MachineIndependent/PoolAlloc.cpp',
  glslang_root + 'glslang/MachineIndependent/propagateNoContraction.cpp',
  glslang_root + 'glslang/MachineIndependent/reflection.cpp',
  glslang_root + 'glslang/MachineIndependent/RemoveTree.cpp',
  glslang_root + 'glslang/MachineIndependent/Scan.cpp',
  glslang_root + 'glslang/MachineIndependent/ShaderLang.cpp',
  glslang_root + 'glslang/MachineIndependent/SpirvIntrinsics.cpp',
  glslang_root + 'glslang/MachineIndependent/SymbolTable.cpp',
  glslang_root + 'glslang/MachineIndependent/Versions.cpp',
  glslang_root + 'glslang/MachineIndependent/preprocessor/Pp.cpp',
  glslang_root + 'glslang/MachineIndependent/preprocessor/PpAtom.cpp',
  glslang_root + 'glslang/MachineIndependent/preprocessor/PpContext.cpp',
  glslang_root + 'glslang/MachineIndependent/preprocessor/PpScanner.cpp',
  glslang_root + 'glslang/MachineIndependent/preprocessor/PpTokens.cpp',
  #glslang_root + 'glslang/OSDependent/Unix/ossource.cpp',
  glslang_root + 'glslang/OSDependent/Windows/ossource.cpp',
  glslang_root + 'glslang/ResourceLimits/ResourceLimits.cpp',
  glslang_root + 'glslang/ResourceLimits/resource_limits_c.cpp',
  glslang_root + 'SPIRV/disassemble.cpp',
  glslang_root + 'SPIRV/doc.cpp',
  glslang_root + 'SPIRV/GlslangToSpv.cpp',
  glslang_root + 'SPIRV/InReadableOrder.cpp',
  glslang_root + 'SPIRV/Logger.cpp',
  glslang_root + 'SPIRV/SpvBuilder.cpp',
  glslang_root + 'SPIRV/SpvPostProcess.cpp',
  glslang_root + 'SPIRV/SPVRemapper.cpp',
  glslang_root + 'SPIRV/SpvTools.cpp',
  glslang_root + 'SPIRV/CInterface/spirv_c_interface.cpp',
  # glslang_root + 'StandAlone/spirv-remap.cpp',
  # glslang_root + 'StandAlone/StandAlone.cpp',
],
include_directories: [
  glslang_root,
  glslang_root + '..',
  spirv_tools_root + 'include',
  spirv_tools_root + 'source',
],
cpp_args: [
  '-DENABLE_OPT=1',
  '-DENABLE_HLSL=1'
])

glsl_optimizer_lib = static_library('glsloptimizer', [
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_lexer.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glcpp/pp.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glcpp/glcpp-parse.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glcpp/glcpp-lex.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/builtin_types.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/builtin_variables.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_type.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/builtin_functions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_to_hir.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_function.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_array_index.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_expr.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/util/hash_table.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/util/ralloc.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa/program/symbol_table.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa/program/prog_hash_table.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa/main/imports.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/strtod.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/s_expression.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/standalone_scaffolding.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_tree_grafting.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_swizzle_swizzle.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_vectorize.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_noop_swizzle.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_rebalance_tree.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_redundant_jumps.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_structure_splitting.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_flip_matrices.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_function_inlining.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_if_simplification.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_minmax.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_code_local.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_functions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_flatten_nested_if_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_cse.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_builtin_variables.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_builtin_varyings.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_code.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_constant_propagation.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_constant_variable.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_copy_propagation.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_copy_propagation_elements.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_algebraic.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_array_splitting.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_constant_folding.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vector_insert.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vertex_id.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_variable_index_to_cond_assign.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vec_index_to_cond_assign.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vec_index_to_swizzle.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vector.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_packed_varyings.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_packing_builtins.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_ubo_reference.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_named_interface_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_noise.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_offset_array.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_output_reads.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_instructions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_jumps.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_mat_op_to_vec.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_discard.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_discard_flow.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_if_to_cond_assign.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/loop_controls.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/loop_unroll.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_clip_distance.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/loop_analysis.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/linker.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniforms.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_varyings.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniform_block_active_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniform_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniform_initializers.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_atomics.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_functions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_interface_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_validate.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_variable_refcount.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_unused_structs.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_print_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_rvalue_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_stats.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_print_metal_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_print_glsl_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_hierarchical_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_hv_accept.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_import_prototypes.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_function.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_function_can_inline.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_function_detect_recursion.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_constant_expression.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_equals.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_expression_flattening.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_builder.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_clone.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_basic_block.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/hir_field_selection.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_symbol_table.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_types.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_parser_extras.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_parser.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_optimizer.cpp',
],
include_directories: [
  bgfx_root + '../bx/include/compat/msvc',
  bgfx_root + '3rdparty/glsl-optimizer/src',
  bgfx_root + '3rdparty/glsl-optimizer/include',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa',
  bgfx_root + '3rdparty/glsl-optimizer/src/node',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl',
],
cpp_args: [
  '/wd4291',
  '/wd4005'
])

spirv_cross_lib = static_library('spirvcross', [
  bgfx_root + '3rdparty/spirv-cross/spirv_parser.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_msl.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_hlsl.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_glsl.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross_parsed_ir.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross_util.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross_c.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cpp.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cfg.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_reflect.cpp',
],
include_directories: [
  bgfx_root + '3rdparty/spirv-cross/include'
],
cpp_args: [
  '-DSPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS'
])

spirv_opt_lib = static_library('spirvopt', [
spirv_tools_root + 'source/assembly_grammar.cpp',
spirv_tools_root + 'source/binary.cpp',
spirv_tools_root + 'source/diagnostic.cpp',
spirv_tools_root + 'source/disassemble.cpp',
spirv_tools_root + 'source/enum_string_mapping.cpp',
spirv_tools_root + 'source/extensions.cpp',
spirv_tools_root + 'source/ext_inst.cpp',
spirv_tools_root + 'source/libspirv.cpp',
spirv_tools_root + 'source/name_mapper.cpp',
spirv_tools_root + 'source/opcode.cpp',
spirv_tools_root + 'source/operand.cpp',
spirv_tools_root + 'source/parsed_operand.cpp',
#spirv_tools_root + 'source/pch_source.cpp',
spirv_tools_root + 'source/print.cpp',
spirv_tools_root + 'source/software_version.cpp',
spirv_tools_root + 'source/spirv_endian.cpp',
#spirv_tools_root + 'source/spirv_fuzzer_options.cpp',
spirv_tools_root + 'source/spirv_optimizer_options.cpp',
spirv_tools_root + 'source/spirv_reducer_options.cpp',
spirv_tools_root + 'source/spirv_target_env.cpp',
spirv_tools_root + 'source/spirv_validator_options.cpp',
spirv_tools_root + 'source/table.cpp',
spirv_tools_root + 'source/text.cpp',
spirv_tools_root + 'source/text_handler.cpp',
spirv_tools_root + 'source/diff/diff.cpp',
spirv_tools_root + 'source/link/linker.cpp',
spirv_tools_root + 'source/lint/divergence_analysis.cpp',
spirv_tools_root + 'source/lint/linter.cpp',
spirv_tools_root + 'source/lint/lint_divergent_derivatives.cpp',
spirv_tools_root + 'source/opt/aggressive_dead_code_elim_pass.cpp',
spirv_tools_root + 'source/opt/amd_ext_to_khr.cpp',
spirv_tools_root + 'source/opt/analyze_live_input_pass.cpp',
spirv_tools_root + 'source/opt/basic_block.cpp',
spirv_tools_root + 'source/opt/block_merge_pass.cpp',
spirv_tools_root + 'source/opt/block_merge_util.cpp',
spirv_tools_root + 'source/opt/build_module.cpp',
spirv_tools_root + 'source/opt/ccp_pass.cpp',
spirv_tools_root + 'source/opt/cfg.cpp',
spirv_tools_root + 'source/opt/cfg_cleanup_pass.cpp',
spirv_tools_root + 'source/opt/code_sink.cpp',
spirv_tools_root + 'source/opt/combine_access_chains.cpp',
spirv_tools_root + 'source/opt/compact_ids_pass.cpp',
spirv_tools_root + 'source/opt/composite.cpp',
spirv_tools_root + 'source/opt/constants.cpp',
spirv_tools_root + 'source/opt/const_folding_rules.cpp',
spirv_tools_root + 'source/opt/control_dependence.cpp',
spirv_tools_root + 'source/opt/convert_to_half_pass.cpp',
spirv_tools_root + 'source/opt/convert_to_sampled_image_pass.cpp',
spirv_tools_root + 'source/opt/copy_prop_arrays.cpp',
spirv_tools_root + 'source/opt/dataflow.cpp',
spirv_tools_root + 'source/opt/dead_branch_elim_pass.cpp',
spirv_tools_root + 'source/opt/dead_insert_elim_pass.cpp',
spirv_tools_root + 'source/opt/dead_variable_elimination.cpp',
spirv_tools_root + 'source/opt/debug_info_manager.cpp',
spirv_tools_root + 'source/opt/decoration_manager.cpp',
spirv_tools_root + 'source/opt/def_use_manager.cpp',
spirv_tools_root + 'source/opt/desc_sroa.cpp',
spirv_tools_root + 'source/opt/desc_sroa_util.cpp',
spirv_tools_root + 'source/opt/dominator_analysis.cpp',
spirv_tools_root + 'source/opt/dominator_tree.cpp',
spirv_tools_root + 'source/opt/eliminate_dead_constant_pass.cpp',
spirv_tools_root + 'source/opt/eliminate_dead_functions_pass.cpp',
spirv_tools_root + 'source/opt/eliminate_dead_functions_util.cpp',
spirv_tools_root + 'source/opt/eliminate_dead_io_components_pass.cpp',
spirv_tools_root + 'source/opt/eliminate_dead_members_pass.cpp',
spirv_tools_root + 'source/opt/eliminate_dead_output_stores_pass.cpp',
spirv_tools_root + 'source/opt/feature_manager.cpp',
spirv_tools_root + 'source/opt/fix_func_call_arguments.cpp',
spirv_tools_root + 'source/opt/fix_storage_class.cpp',
spirv_tools_root + 'source/opt/flatten_decoration_pass.cpp',
spirv_tools_root + 'source/opt/fold.cpp',
spirv_tools_root + 'source/opt/folding_rules.cpp',
spirv_tools_root + 'source/opt/fold_spec_constant_op_and_composite_pass.cpp',
spirv_tools_root + 'source/opt/freeze_spec_constant_value_pass.cpp',
spirv_tools_root + 'source/opt/function.cpp',
spirv_tools_root + 'source/opt/graphics_robust_access_pass.cpp',
spirv_tools_root + 'source/opt/if_conversion.cpp',
spirv_tools_root + 'source/opt/inline_exhaustive_pass.cpp',
spirv_tools_root + 'source/opt/inline_opaque_pass.cpp',
spirv_tools_root + 'source/opt/inline_pass.cpp',
spirv_tools_root + 'source/opt/instruction.cpp',
spirv_tools_root + 'source/opt/instruction_list.cpp',
spirv_tools_root + 'source/opt/instrument_pass.cpp',
spirv_tools_root + 'source/opt/inst_debug_printf_pass.cpp',
spirv_tools_root + 'source/opt/interface_var_sroa.cpp',
spirv_tools_root + 'source/opt/interp_fixup_pass.cpp',
spirv_tools_root + 'source/opt/invocation_interlock_placement_pass.cpp',
spirv_tools_root + 'source/opt/ir_context.cpp',
spirv_tools_root + 'source/opt/ir_loader.cpp',
spirv_tools_root + 'source/opt/licm_pass.cpp',
spirv_tools_root + 'source/opt/liveness.cpp',
spirv_tools_root + 'source/opt/local_access_chain_convert_pass.cpp',
spirv_tools_root + 'source/opt/local_redundancy_elimination.cpp',
spirv_tools_root + 'source/opt/local_single_block_elim_pass.cpp',
spirv_tools_root + 'source/opt/local_single_store_elim_pass.cpp',
spirv_tools_root + 'source/opt/loop_dependence.cpp',
spirv_tools_root + 'source/opt/loop_dependence_helpers.cpp',
spirv_tools_root + 'source/opt/loop_descriptor.cpp',
spirv_tools_root + 'source/opt/loop_fission.cpp',
spirv_tools_root + 'source/opt/loop_fusion.cpp',
spirv_tools_root + 'source/opt/loop_fusion_pass.cpp',
spirv_tools_root + 'source/opt/loop_peeling.cpp',
spirv_tools_root + 'source/opt/loop_unroller.cpp',
spirv_tools_root + 'source/opt/loop_unswitch_pass.cpp',
spirv_tools_root + 'source/opt/loop_utils.cpp',
spirv_tools_root + 'source/opt/mem_pass.cpp',
spirv_tools_root + 'source/opt/merge_return_pass.cpp',
spirv_tools_root + 'source/opt/modify_maximal_reconvergence.cpp',
spirv_tools_root + 'source/opt/module.cpp',
spirv_tools_root + 'source/opt/opextinst_forward_ref_fixup_pass.cpp',
spirv_tools_root + 'source/opt/optimizer.cpp',
spirv_tools_root + 'source/opt/pass.cpp',
spirv_tools_root + 'source/opt/pass_manager.cpp',
spirv_tools_root + 'source/opt/pch_source_opt.cpp',
spirv_tools_root + 'source/opt/private_to_local_pass.cpp',
spirv_tools_root + 'source/opt/propagator.cpp',
spirv_tools_root + 'source/opt/reduce_load_size.cpp',
spirv_tools_root + 'source/opt/redundancy_elimination.cpp',
spirv_tools_root + 'source/opt/register_pressure.cpp',
spirv_tools_root + 'source/opt/relax_float_ops_pass.cpp',
spirv_tools_root + 'source/opt/remove_dontinline_pass.cpp',
spirv_tools_root + 'source/opt/remove_duplicates_pass.cpp',
spirv_tools_root + 'source/opt/remove_unused_interface_variables_pass.cpp',
spirv_tools_root + 'source/opt/replace_desc_array_access_using_var_index.cpp',
spirv_tools_root + 'source/opt/replace_invalid_opc.cpp',
spirv_tools_root + 'source/opt/scalar_analysis.cpp',
spirv_tools_root + 'source/opt/scalar_analysis_simplification.cpp',
spirv_tools_root + 'source/opt/scalar_replacement_pass.cpp',
spirv_tools_root + 'source/opt/set_spec_constant_default_value_pass.cpp',
spirv_tools_root + 'source/opt/simplification_pass.cpp',
spirv_tools_root + 'source/opt/spread_volatile_semantics.cpp',
spirv_tools_root + 'source/opt/ssa_rewrite_pass.cpp',
spirv_tools_root + 'source/opt/strength_reduction_pass.cpp',
spirv_tools_root + 'source/opt/strip_debug_info_pass.cpp',
spirv_tools_root + 'source/opt/strip_nonsemantic_info_pass.cpp',
spirv_tools_root + 'source/opt/struct_cfg_analysis.cpp',
spirv_tools_root + 'source/opt/switch_descriptorset_pass.cpp',
spirv_tools_root + 'source/opt/trim_capabilities_pass.cpp',
spirv_tools_root + 'source/opt/types.cpp',
spirv_tools_root + 'source/opt/type_manager.cpp',
spirv_tools_root + 'source/opt/unify_const_pass.cpp',
spirv_tools_root + 'source/opt/upgrade_memory_model.cpp',
spirv_tools_root + 'source/opt/value_number_table.cpp',
spirv_tools_root + 'source/opt/vector_dce.cpp',
spirv_tools_root + 'source/opt/workaround1209.cpp',
spirv_tools_root + 'source/opt/wrap_opkill.cpp',
spirv_tools_root + 'source/reduce/change_operand_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/change_operand_to_undef_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/conditional_branch_to_simple_conditional_branch_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/conditional_branch_to_simple_conditional_branch_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/merge_blocks_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/merge_blocks_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/operand_to_const_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/operand_to_dominating_id_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/operand_to_undef_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/pch_source_reduce.cpp',
spirv_tools_root + 'source/reduce/reducer.cpp',
spirv_tools_root + 'source/reduce/reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/reduction_pass.cpp',
spirv_tools_root + 'source/reduce/reduction_util.cpp',
spirv_tools_root + 'source/reduce/remove_block_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/remove_block_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/remove_function_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/remove_function_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/remove_instruction_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/remove_selection_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/remove_selection_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/remove_struct_member_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/remove_unused_instruction_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/remove_unused_struct_member_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/simple_conditional_branch_to_branch_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/simple_conditional_branch_to_branch_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/structured_construct_to_block_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/structured_construct_to_block_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/reduce/structured_loop_to_selection_reduction_opportunity.cpp',
spirv_tools_root + 'source/reduce/structured_loop_to_selection_reduction_opportunity_finder.cpp',
spirv_tools_root + 'source/util/bit_vector.cpp',
spirv_tools_root + 'source/util/parse_number.cpp',
spirv_tools_root + 'source/util/string_utils.cpp',
#spirv_tools_root + 'source/util/timer.cpp',
spirv_tools_root + 'source/val/basic_block.cpp',
spirv_tools_root + 'source/val/construct.cpp',
spirv_tools_root + 'source/val/function.cpp',
spirv_tools_root + 'source/val/instruction.cpp',
spirv_tools_root + 'source/val/validate.cpp',
spirv_tools_root + 'source/val/validate_adjacency.cpp',
spirv_tools_root + 'source/val/validate_annotation.cpp',
spirv_tools_root + 'source/val/validate_arithmetics.cpp',
spirv_tools_root + 'source/val/validate_atomics.cpp',
spirv_tools_root + 'source/val/validate_barriers.cpp',
spirv_tools_root + 'source/val/validate_bitwise.cpp',
spirv_tools_root + 'source/val/validate_builtins.cpp',
spirv_tools_root + 'source/val/validate_capability.cpp',
spirv_tools_root + 'source/val/validate_cfg.cpp',
spirv_tools_root + 'source/val/validate_composites.cpp',
spirv_tools_root + 'source/val/validate_constants.cpp',
spirv_tools_root + 'source/val/validate_conversion.cpp',
spirv_tools_root + 'source/val/validate_debug.cpp',
spirv_tools_root + 'source/val/validate_decorations.cpp',
spirv_tools_root + 'source/val/validate_derivatives.cpp',
spirv_tools_root + 'source/val/validate_execution_limitations.cpp',
spirv_tools_root + 'source/val/validate_extensions.cpp',
spirv_tools_root + 'source/val/validate_function.cpp',
spirv_tools_root + 'source/val/validate_id.cpp',
spirv_tools_root + 'source/val/validate_image.cpp',
spirv_tools_root + 'source/val/validate_instruction.cpp',
spirv_tools_root + 'source/val/validate_interfaces.cpp',
spirv_tools_root + 'source/val/validate_layout.cpp',
spirv_tools_root + 'source/val/validate_literals.cpp',
spirv_tools_root + 'source/val/validate_logicals.cpp',
spirv_tools_root + 'source/val/validate_memory.cpp',
spirv_tools_root + 'source/val/validate_memory_semantics.cpp',
spirv_tools_root + 'source/val/validate_mesh_shading.cpp',
spirv_tools_root + 'source/val/validate_misc.cpp',
spirv_tools_root + 'source/val/validate_mode_setting.cpp',
spirv_tools_root + 'source/val/validate_non_uniform.cpp',
spirv_tools_root + 'source/val/validate_primitives.cpp',
spirv_tools_root + 'source/val/validate_ray_query.cpp',
spirv_tools_root + 'source/val/validate_ray_tracing.cpp',
spirv_tools_root + 'source/val/validate_ray_tracing_reorder.cpp',
spirv_tools_root + 'source/val/validate_scopes.cpp',
spirv_tools_root + 'source/val/validate_small_type_uses.cpp',
spirv_tools_root + 'source/val/validate_type.cpp',
spirv_tools_root + 'source/val/validation_state.cpp',
],

include_directories: [
  bgfx_root + '3rdparty/spirv-tools',
  bgfx_root + '3rdparty/spirv-tools/include',
  bgfx_root + '3rdparty/spirv-tools/include/generated',
  bgfx_root + '3rdparty/spirv-tools/source',
  bgfx_root + '3rdparty/spirv-headers/include',
])

executable('shaderc', [
  bgfx_root + 'src/shader_dxbc.cpp',
  bgfx_root + 'src/shader.cpp',
  bgfx_root + 'src/shader_spirv.cpp',
  bgfx_root + 'src/vertexlayout.cpp',
  shaderc_root + 'shaderc_glsl.cpp',
  shaderc_root + 'shaderc_hlsl.cpp',
  shaderc_root + 'shaderc_metal.cpp',
  shaderc_root + 'shaderc_pssl.cpp',
  shaderc_root + 'shaderc_spirv.cpp',
  shaderc_root + 'shaderc.cpp'
  ],
  link_with: [
    fcpp_lib,
    glslang_lib,
    glsl_optimizer_lib,
    spirv_opt_lib,
    spirv_cross_lib
  ], 
  dependencies: [
    bx_dep,
    bimg_dep,
    bgfx_dep
  ],
  include_directories: [
  bgfx_root + '3rdparty',
  bgfx_root + '3rdparty/fcpp',
  bgfx_root + '3rdparty/glslang/glslang/Public',
  bgfx_root + '3rdparty/glslang/glslang/Include',
  bgfx_root + '3rdparty/glslang',
  bgfx_root + '3rdparty/glsl-optimizer/include',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl',
  bgfx_root + '3rdparty/spirv-cross',
  bgfx_root + '3rdparty/spirv-tools/include',
  bgfx_root + '3rdparty/glsl-optimizer/include/c99',
])